# django-project-version

./: .bandit  .coveragerc  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS  CONTRIBUTORS  MANIFEST.in  MIT-LICENSE  Makefile  Pipfile  README.rst  TODO  manage.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml  dependabot.yml
.github/workflows/: build.yml  check-requirements.yml  check.yml  coveralls.yml  test.yml
djversion/: __init__.py  apps.py  conf.py  context_processors.py  models.py  rest.py  settings.py  urls.py  utils.py
djversion/locale/en/LC_MESSAGES/: django.mo  django.po
djversion/locale/uk/LC_MESSAGES/: django.mo  django.po
djversion/management/: __init__.py
djversion/management/commands/: __init__.py  print-version.py  print_version.py
djversion/templatetags/: __init__.py  djversion_tags.py
tests/: __init__.py  settings.py  test_context_processors.py  test_rest.py  test_utils.py
tests/management/: __init__.py
tests/management/commands/: __init__.py  test_print-version.py
tests/templatetags/: __init__.py  test_djversion_tags.py
